# hashcracker

./: .gitignore  README.md  pyproject.toml
examples/: wordlist.txt
hashcracker/: __init__.py  __main__.py  candidates.py  cli.py  engine.py  hashing.py  reporter.py
scripts/: make_hashes.py
tests/: test_engine.py  test_hashing.py
